--- a/pujh-dubbo/dubbo-consumer/src/main/resources/application.properties
+++ b/pujh-dubbo/dubbo-consumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dubbo-consumer
 dubbo.registry.address=zookeeper://101.200.125.41:2181
-dubbo.metadata-report.address=zookeeper://101.200.125.41:2181
+#dubbo.metadata-report.address=zookeeper://101.200.125.41:2181
 ## 这个配置是因为时间太短不能在时间内连接上zookeeper
 dubbo.registry.timeout=10000
